RESOLVED FIXED288998
[Site Isolation] Fix `_countStringMatches:`
https://bugs.webkit.org/show_bug.cgi?id=288998
Summary [Site Isolation] Fix `_countStringMatches:`
Charlie Wolfe
Reported 2025-03-03 13:19:50 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-03 13:20:02 PST
Charlie Wolfe
Comment 2 2025-03-03 13:21:13 PST
EWS
Comment 3 2025-03-04 10:49:52 PST
Committed 291575@main (7634f1ef215c): <https://commits.webkit.org/291575@main> Reviewed commits have been landed. Closing PR #41798 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.