[Site Isolation] Fix `_countStringMatches:` https://bugs.webkit.org/show_bug.cgi?id=288998 rdar://146047341

Reviewed by Aditya Keerthi.

Send messages to all web processes associated with a page and aggregate responses.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::countStringMatches):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, CountStringMatches)):

Canonical link: https://commits.webkit.org/291575@main